--- a/src/main/resources/templates/visits/list.html
+++ b/src/main/resources/templates/visits/list.html
@@ -306,7 +306,7 @@
         // هام: تأكد أن الـ Controller الخاص بصفحة العيادة يرسل كائن doctor أو user
         // إذا كان المستخدم الحالي هو نفس الطبيب، فالكود التالي سيعمل.
         // إذا كان هناك خطأ، تأكد من أن "doctor.id" متاح في الـ Model لهذه الصفحة
-        const currentUserId = /*[[${doctor != null ? doctor.id : 0}]]*/ 0;
+        const currentUserId =[[${doctor != null ? doctor.id : 0}]];
 
         console.log('👤 User ID:', currentUserId);
 
