Enhance visit pricing logic and add chat popup: update visit price calculation based on visit type in DoctorController, and include chat popup fragment in list.html.

--- a/src/main/resources/templates/visits/list.html
+++ b/src/main/resources/templates/visits/list.html
@@ -184,6 +184,7 @@
 </head>
 <body>
 <div th:replace="fragments/sidebar :: doctorSidebar()"></div>
+<div th:replace="fragments/chat-popup :: chatPopupFragment"></div>
 
 <div class="page-wrapper">
     <div class="header-section">
